--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -1,32 +1,34 @@
 <div class="chat-component">
-  @if(currentUser){
+  @if (currentUser) {
     <div class="conversation-list">
       <div class="contact-search">
         <input type="text">
       </div>
       <div class="list">
-        @if(contacts){
-          @for(contact of contacts | async; track $index){
+        @if (contacts) {
+          @for (contact of contacts | async; track $index) {
             <div class="contact-card" (click)="onContactClick(contact)">
-              {{getContactUsername(currentUser.uid, contact)}}
+              {{ getContactUsername(currentUser.uid, contact) }}
             </div>
           }
         }
       </div>
-    </div>  }
+    </div>
+  }
   <div class="chat-section">
-    @if(currentContact){
+    @if (currentContact) {
       <div class="message-list">
-        @if(currentContact.conversationId){
-          @for(message of messages | async ; track $index){
+        @if (currentContact.conversationId) {
+          @for (message of messages | async; track $index) {
             <app-message [message]="message"></app-message>
           }
         }
       </div>
       <div class="message-creation">
-        <form class="message-form" [formGroup]="messageForm" >
+        <form class="message-form" [formGroup]="messageForm">
           <label for="message"></label>
-          <textarea id="message" formControlName="message" placeholder="Type a message..." rows="5" cols="35" type="text"></textarea>
+          <textarea id="message" formControlName="message" placeholder="Type a message..." rows="5" cols="35"
+                    type="text"></textarea>
           <button mat-button mat-stroked-button (click)="onSendMessage()">Send</button>
         </form>
       </div>
