--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -1,15 +1,18 @@
-.chat-component{
+.chat-component {
   display: flex;
-  padding: 4rem 2rem;
-  width: calc(100% - 12.5rem);
-  height: 80vh;
+  padding: 2rem;
   overflow: hidden;
   gap: 2rem;
+  height: 90vh;
+  width: 45rem;
+  background-color: white;
+  border-radius: 1rem;
+  margin: 1rem;
 
-  .chat-section{
+  .chat-section {
     display: flex;
     flex-direction: column;
-    gap:2rem;
+    gap: 2rem;
     margin: auto;
 
     .message-list {
@@ -21,54 +24,56 @@
       scrollbar-width: none;
       height: 50vh;
       margin: auto;
-      mask-image: linear-gradient(to bottom, black calc(100% - 48px), transparent 100%);
+      mask-image: linear-gradient(
+        to bottom,
+        black calc(100% - 48px),
+        transparent 100%
+      );
     }
 
-
-
-    .message-creation{
-        padding: 1rem;
-        background-color: #637db1;
+    .message-creation {
+      padding: 1rem;
+      background-color: #637db1;
       margin: auto;
-      border-radius: .5rem;
+      border-radius: 0.5rem;
 
-      .message-form{
+      .message-form {
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        width:30rem;
+        width: 30rem;
 
-        textarea{
+        textarea {
           border-radius: 0.5rem;
           resize: none;
         }
 
-        button{
+        button {
           background-color: #1f4b8c;
-          border-radius: .5rem;
+          border-radius: 0.5rem;
           width: fit-content;
+          color: white;
         }
       }
-
     }
   }
 
-  .conversation-list{
+  .conversation-list {
     display: flex;
     flex-direction: column;
     gap: 2rem;
     overflow-y: scroll;
     scrollbar-width: none;
 
-    .list{
+    .list {
       display: flex;
       flex-direction: column;
       gap: 1rem;
 
-      .contact-card{
+      .contact-card {
         padding: 1rem;
         background-color: var(--main-card-bg-color);
-        border-radius: .5rem;
+        cursor: pointer;
       }
     }
   }
