--- a/src/app/components/comment-list/comment-list.component.scss
+++ b/src/app/components/comment-list/comment-list.component.scss
@@ -1,9 +1,11 @@
 .comment-list-component {
   display: flex;
+  flex: 1;
   flex-direction: column;
   padding: 4rem 2rem;
   margin: auto;
   max-width: 45rem;
+  overflow-y: auto;
 
   .list-title {
     padding: 1rem;
@@ -28,20 +30,13 @@
         flex-direction: row;
         justify-content: space-between;
 
-        .header-content{
-          padding-left:1rem;
-          padding-right:1rem;
+        .header-content {
+          padding-left: 1rem;
+          padding-right: 1rem;
         }
       }
       .comment-text {
-        padding:1rem;
-      }
-    }
-    .comment-card:first-of-type {
-      border-radius: 0.5rem 0.5rem 0rem 0rem;
-
-      .comment-header {
-        border-radius: 0.5rem 0.5rem 0rem 0rem;
+        padding: 1rem;
       }
     }
     .no-comment-msg {
