--- a/src/app/components/new-post/new-post.component.scss
+++ b/src/app/components/new-post/new-post.component.scss
@@ -1,9 +1,12 @@
 .new-post-component {
   display: flex;
   flex-direction: column;
-  padding: 6rem 2rem;
-  width: calc(100% - 12.5rem);
-  max-width: 30rem;
+  padding: 2rem;
+  height: 90vh;
+  width: 40rem;
+  background-color: white;
+  border-radius: 1rem;
+  margin: 1rem;
 
   .new-post-form {
     display: flex;
@@ -15,7 +18,7 @@
       flex-direction: column;
       gap: 1rem;
 
-      .title-input{
+      .title-input {
         width: 20rem;
         height: 2rem;
         border: 1px solid skyblue;
@@ -29,32 +32,26 @@
         border-radius: 0.5rem;
         resize: none;
       }
-      .image-input{
+      .image-input {
         width: 20rem;
         height: 2rem;
         border: 1px solid skyblue;
         border-radius: 0.5rem;
       }
     }
-    .publish-btn{
+    .publish-btn {
       width: 10rem;
       height: 2rem;
       color: white;
-      background-color:skyblue;
+      background-color: skyblue;
       border: none;
       border-radius: 0.5rem;
       cursor: pointer;
 
-      &:disabled{
-       opacity: 50%;
+      &:disabled {
+        opacity: 50%;
         cursor: default;
       }
     }
-  }
-}
-
-@media (max-width: 600px) {
-  .new-post-component{
-    width: calc(100% - 10rem);
   }
 }
