--- a/src/app/components/post-card/post-card.component.scss
+++ b/src/app/components/post-card/post-card.component.scss
@@ -1,10 +1,9 @@
 .post-card {
   display: flex;
   flex-direction: column;
-  padding: 1rem;
-  border-bottom: 0.1rem solid;
-  background-color: var(--main-card-bg-color);
-  border-radius: .5rem;
+  padding: 1rem 1rem 0;
+  background-color: white;
+  border-radius: 0.5rem;
 
   .image {
     height: 5rem;
@@ -14,5 +13,17 @@
   .card-content {
     margin: auto;
     text-align: center;
+  }
+
+  .actions {
+    display: flex;
+    justify-content: space-between;
+
+    & > * {
+      display: flex;
+      gap: 0.5rem;
+      padding: 0.5rem;
+      cursor: pointer;
+    }
   }
 }
