--- a/src/app/components/post-detail/post-detail.component.scss
+++ b/src/app/components/post-detail/post-detail.component.scss
@@ -1,15 +1,19 @@
 .post-detail-component {
   display: flex;
   flex-direction: column;
-  padding: 6rem 2rem;
-  width: calc(100% - 12.5rem);
-  max-width: 64rem;
+  padding: 2rem;
+  height: 90vh;
+  width: 45rem;
+  background-color: white;
+  margin: auto;
+  border-radius: 1rem;
 
   .post-container {
     display: flex;
     flex-direction: column;
     margin: auto;
-    max-width: 40rem;
+    gap: 2rem;
+    width: 30rem;
 
     .image {
       margin: auto;
@@ -17,9 +21,9 @@
     }
 
     .text-content {
-      display:flex;
+      display: flex;
       flex-direction: column;
-      gap:0.8rem;
+      gap: 0.8rem;
       width: 100%;
       margin: auto;
 
@@ -27,13 +31,28 @@
         padding-left: 2rem;
         padding-right: 2rem;
       }
+    }
 
+    .actions {
+      display: flex;
+      justify-content: space-between;
+
+      & > * {
+        display: flex;
+        gap: 0.5rem;
+        padding: 0.5rem;
+        cursor: pointer;
+      }
     }
   }
 
+  .scroll-container {
+    overflow-y: scroll;
+    scrollbar-width: none;
+  }
 }
 @media (max-width: 600px) {
-  .dashboard-component{
+  .dashboard-component {
     width: calc(100% - 10rem);
   }
 }
