--- a/src/app/components/post-list/post-list.component.scss
+++ b/src/app/components/post-list/post-list.component.scss
@@ -1,18 +1,10 @@
 .post-list-component {
   display: flex;
   flex-direction: column;
-  padding: 4rem 2rem;
-  width: calc(100% - 12.5rem);
-  max-width: 30rem;
+  width: 30rem;
+  padding: 1rem;
   justify-content: center;
   overflow: scroll;
   scrollbar-width: none;
-  margin: auto;
-  gap:.5rem;
-}
-
-@media (max-width: 600px) {
-  .post-list-component{
-    width: calc(100% - 10rem);
-  }
+  gap: 0.5rem;
 }
