--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -1,80 +1,96 @@
-.chat-component {
+.main-container {
   display: flex;
-  padding: 2rem;
-  overflow: hidden;
-  gap: 2rem;
-  height: 90vh;
-  width: 45rem;
-  background-color: white;
-  border-radius: 1rem;
-  margin: 1rem;
 
-  .chat-section {
+  .chat-component {
     display: flex;
-    flex-direction: column;
+    padding: 2rem;
+    overflow: hidden;
     gap: 2rem;
-    margin: auto;
+    height: 90vh;
+    width: 45rem;
+    background-color: white;
+    border-radius: 1rem;
+    margin: 1rem;
 
-    .message-list {
+    .chat-section {
       display: flex;
       flex-direction: column;
-      gap: 0.5rem;
-      width: 30rem;
-      overflow-y: scroll;
-      scrollbar-width: none;
-      height: 50vh;
+      gap: 2rem;
       margin: auto;
-      mask-image: linear-gradient(
-        to bottom,
-        black calc(100% - 48px),
-        transparent 100%
-      );
+
+      .message-list {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+        width: 30rem;
+        overflow-y: scroll;
+        scrollbar-width: none;
+        height: 50vh;
+        margin: auto;
+        mask-image: linear-gradient(
+          to bottom,
+          black calc(100% - 48px),
+          transparent 100%
+        );
+      }
+
+      .message-creation {
+        padding: 1rem;
+        background-color: #637db1;
+        margin: auto;
+        border-radius: 0.5rem;
+
+        .message-form {
+          display: flex;
+          flex-direction: column;
+          gap: 1rem;
+          width: 30rem;
+
+          textarea {
+            border-radius: 0.5rem;
+            resize: none;
+          }
+
+          button {
+            background-color: #1f4b8c;
+            border-radius: 0.5rem;
+            width: fit-content;
+            color: white;
+          }
+        }
+      }
     }
 
-    .message-creation {
-      padding: 1rem;
-      background-color: #637db1;
-      margin: auto;
-      border-radius: 0.5rem;
+    .conversation-list {
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+      overflow-y: scroll;
+      scrollbar-width: none;
 
-      .message-form {
+      .list {
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        width: 30rem;
 
-        textarea {
-          border-radius: 0.5rem;
-          resize: none;
-        }
-
-        button {
-          background-color: #1f4b8c;
-          border-radius: 0.5rem;
-          width: fit-content;
-          color: white;
+        .contact-card {
+          padding: 1rem;
+          background-color: var(--main-card-bg-color);
+          cursor: pointer;
         }
       }
     }
   }
 
-  .conversation-list {
+  .contact-request-list {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
-    overflow-y: scroll;
-    scrollbar-width: none;
-
-    .list {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-
-      .contact-card {
-        padding: 1rem;
-        background-color: var(--main-card-bg-color);
-        cursor: pointer;
-      }
-    }
+    gap: 0.5rem;
+    background-color: white;
+    border-radius: 1rem;
+    width: 20rem;
+    height: 90vh;
+    margin: 1rem;
+    padding: 2rem;
   }
 }
