--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -73,7 +73,10 @@
         flex-direction: column;
         gap: 1rem;
 
-        .contact-card {
+        .chat-card {
+          display: flex;
+          gap: 0.5rem;
+          flex-wrap: wrap;
           padding: 1rem;
           background-color: var(--main-card-bg-color);
           cursor: pointer;
