--- a/src/app/components/modals/new-chat-modal/new-chat-modal.component.html
+++ b/src/app/components/modals/new-chat-modal/new-chat-modal.component.html
@@ -4,7 +4,7 @@
     Start a new chat
 
     <div class="user-list">
-      <mat-selection-list [(ngModel)]="selectedUsers">
+      <mat-selection-list #usersList>
         @for (user of users$ | async; track $index) {
           <mat-list-option [value]="user.id">
             {{ user.username }}
@@ -16,14 +16,14 @@
   <mat-dialog-actions>
     <button
       type="button"
-      mat-button
-      mat-raised-button
-      (click)="confirm()"
-      [disabled]="!selectedUsers.length"
+      color="primary"
+      mat-flat-button
+      (click)="confirm(usersList.selectedOptions.selected)"
+      [disabled]="!usersList.selectedOptions.selected.length"
     >
       Confirm
     </button>
-    <button type="button" mat-button mat-raised-button mat-dialog-close>
+    <button type="button" color="primary" mat-stroked-button mat-dialog-close>
       Cancel
     </button></mat-dialog-actions
   >
