--- a/src/app/components/modals/new-chat-modal/new-chat-modal.component.scss
+++ b/src/app/components/modals/new-chat-modal/new-chat-modal.component.scss
@@ -1,7 +1,9 @@
 .new-chat-modal {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  justify-content: space-between;
+  height: 100%;
+  padding: 1rem;
 
   .user-list {
     display: flex;
