--- a/src/app/components/post-detail/post-detail.component.scss
+++ b/src/app/components/post-detail/post-detail.component.scss
@@ -2,10 +2,9 @@
   display: flex;
   flex-direction: column;
   padding: 2rem;
-  height: 90vh;
   width: 45rem;
   background-color: white;
-  margin: auto;
+  margin: 1rem;
   border-radius: 1rem;
 
   .post-container {
