--- a/src/app/components/post-card/post-card.component.scss
+++ b/src/app/components/post-card/post-card.component.scss
@@ -25,5 +25,11 @@
       padding: 0.5rem;
       cursor: pointer;
     }
+    .like-btn {
+      color: green;
+    }
+    .dislike-btn {
+      color: red;
+    }
   }
 }
