--- a/src/app/components/post-list/post-list.component.html
+++ b/src/app/components/post-list/post-list.component.html
@@ -1,4 +1,7 @@
-@if (currentUser()?.id) {
+@if (posts.hasValue() && currentUser.hasValue()) {
+  @let postList = posts.value()!;
+  @let user = currentUser.value()!;
+
   <div class="post-list-component">
     <button
       class="new-post-btn"
@@ -10,10 +13,10 @@
     >
       New Post
     </button>
-    @for (post of posts(); track $index) {
+    @for (post of postList; track $index) {
       <div class="card-container">
         <app-post-card
-          [currentUserId]="currentUser()?.id ?? undefined"
+          [currentUserId]="user.id ?? undefined"
           [post]="post"
           routerLink="['/posts', post.id]"
         ></app-post-card>
