feat: sort posts and comments by createdAt, from most recent.

--- a/src/app/components/comment-list/comment-list.component.html
+++ b/src/app/components/comment-list/comment-list.component.html
@@ -7,7 +7,7 @@
             <div class="comment-header">
               <p class="header-content">{{ comment.author.username }}</p>
               <p class="header-content">
-                {{ comment.created_at | date: "medium" }}
+                {{ comment.createdAt | date: "medium" }}
               </p>
             </div>
             <p class="comment-text">{{ comment.body }}</p>
