--- a/src/app/components/post-detail/post-detail.component.html
+++ b/src/app/components/post-detail/post-detail.component.html
@@ -1,6 +1,5 @@
 @if (post.hasValue() && comments.hasValue()) {
   @let currentPost = post.value()!;
-  @let currentComments = comments.value()!;
 
   <div class="post-detail-component">
     <div class="post-container">
@@ -33,7 +32,7 @@
     }
     <div class="scroll-container">
       <app-comment-list
-        [comments]="currentComments"
+        [comments]="sortedComments()"
         [postID]="currentPost.id"
       ></app-comment-list>
     </div>
