refacto: adjust margins, add filter button

--- a/src/app/components/post-card/post-card.component.html
+++ b/src/app/components/post-card/post-card.component.html
@@ -23,7 +23,7 @@
       }
       @if (isFavorite) {
         <div (click)="removeFromFavorites(post.id, currentUserId)">
-          <mat-icon>bookmark</mat-icon>
+          <mat-icon class="save-btn">bookmark</mat-icon>
           <span>save</span>
         </div>
       } @else {
