--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -1,20 +1,21 @@
 .main-container {
   display: flex;
+  height: 100%;
+  gap: 2rem;
 
   .chat-component {
     display: flex;
     padding: 2rem;
     overflow: hidden;
     gap: 2rem;
-    height: 90vh;
     width: 45rem;
     background-color: white;
     border-radius: 1rem;
-    margin: 1rem;
 
     .chat-section {
       display: flex;
       flex-direction: column;
+      height: 100%;
       gap: 2rem;
       margin: auto;
 
@@ -25,7 +26,7 @@
         width: 30rem;
         overflow-y: scroll;
         scrollbar-width: none;
-        height: 50vh;
+        flex: 1;
         margin: auto;
         mask-image: linear-gradient(
           to bottom,
@@ -112,8 +113,6 @@
     background-color: white;
     border-radius: 1rem;
     min-width: 15rem;
-    height: 90vh;
-    margin: 1rem;
     padding: 2rem;
   }
 }
