--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -5,8 +5,7 @@
   max-width: 30rem;
   background-color: white;
   border-radius: 1rem;
-  height: 90vh;
-  margin: 1rem;
+  height: 100%;
 
   .dashboard-header {
     display: flex;
