--- a/src/app/components/post-detail/post-detail.component.scss
+++ b/src/app/components/post-detail/post-detail.component.scss
@@ -1,10 +1,9 @@
 .post-detail-component {
   display: flex;
   flex-direction: column;
-  padding: 2rem;
   width: 45rem;
+  min-height: 100%;
   background-color: white;
-  margin: 1rem;
   border-radius: 1rem;
 
   .post-container {
