--- a/src/app/components/post-list/post-list.component.scss
+++ b/src/app/components/post-list/post-list.component.scss
@@ -8,8 +8,16 @@
   scrollbar-width: none;
   gap: 0.5rem;
 
-  .new-post-btn {
-    padding: 0.5rem 1rem;
-    width: fit-content;
+  .controls {
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
+    background-color: white;
+    border-radius: 0.5rem;
+
+    .new-post-btn {
+      padding: 0.5rem 1rem;
+      width: fit-content;
+    }
   }
 }
