--- a/src/app/components/modals/new-post-modal/new-post-modal.component.scss
+++ b/src/app/components/modals/new-post-modal/new-post-modal.component.scss
@@ -10,32 +10,28 @@
     flex-direction: column;
     gap: 1rem;
 
-    .form-block {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-
-      .title-input {
-        width: 20rem;
-        height: 2rem;
-        border: 1px solid skyblue;
-        border-radius: 0.5rem;
-      }
-
-      .body-input {
-        width: 100%;
-        height: 20rem;
-        border: 1px solid skyblue;
-        border-radius: 0.5rem;
-        resize: none;
-      }
-      .image-input {
-        width: 20rem;
-        height: 2rem;
-        border: 1px solid skyblue;
-        border-radius: 0.5rem;
-      }
+    .title-input {
+      width: 20rem;
+      height: 2rem;
+      border: 1px solid skyblue;
+      border-radius: 0.5rem;
     }
+
+    .body-input {
+      width: 100%;
+      height: 20rem;
+      border: 1px solid skyblue;
+      border-radius: 0.5rem;
+      resize: none;
+      padding: 0.5rem;
+    }
+    .image-input {
+      width: 20rem;
+      height: 2rem;
+      border: 1px solid skyblue;
+      border-radius: 0.5rem;
+    }
+
     .publish-btn {
       width: 10rem;
       height: 2rem;
