--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -69,6 +69,6 @@
         }
       </div>
     </div>
-    <div class="contact-request-list"></div>
+    <!--    <div class="contact-request-list"></div>-->
   </div>
 }
