--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -8,7 +8,7 @@
     padding: 2rem;
     overflow: hidden;
     gap: 2rem;
-    width: 45rem;
+    max-width: 45rem;
     background-color: white;
     border-radius: 1rem;
 
@@ -23,7 +23,7 @@
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
-        width: 30rem;
+        max-width: 30rem;
         overflow-y: scroll;
         scrollbar-width: none;
         flex: 1;
@@ -59,7 +59,7 @@
           display: flex;
           flex-direction: column;
           gap: 1rem;
-          width: 30rem;
+          max-width: 30rem;
 
           textarea {
             border-radius: 0.5rem;
@@ -89,7 +89,7 @@
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        width: 10rem;
+        max-width: 10rem;
 
         .chat-card {
           background-color: #637db1;
