--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,16 +1,17 @@
 .navbar-component {
   display: flex;
   flex-direction: column;
+  width: 100vw;
   height: 100vh;
 
-  .side-bar {
+  .top-bar {
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    flex-direction: row;
+    justify-content: space-between;
     padding: 1rem 1rem;
-    overflow-y: auto;
     background-color: white;
     gap: 2rem;
+    width: 97vw;
 
     .navbar-brand {
       display: flex;
@@ -33,7 +34,7 @@
 
     .nav-links {
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       justify-content: space-around;
       gap: 1rem;
 
@@ -55,21 +56,13 @@
     }
   }
 
-  .main-content {
-    display: flex;
-    flex: 1;
-    overflow: hidden;
-  }
-
-  .scroll-container {
-    display: flex;
-    flex: 1;
-    overflow: auto;
-    padding: 1rem;
-  }
-
   a {
     vertical-align: middle;
+  }
+
+  .main-content {
+    padding: 2rem;
+    height: 100%;
   }
 
   @media (max-width: 600px) {
