--- a/src/app/components/saved-posts/saved-posts.component.scss
+++ b/src/app/components/saved-posts/saved-posts.component.scss
@@ -1,7 +1,7 @@
 .saved-posts-component {
   display: flex;
   flex-direction: column;
-  width: 30rem;
+  max-width: 45rem;
   justify-content: center;
   overflow: scroll;
   scrollbar-width: none;
