--- a/src/app/components/post-list/post-list.component.html
+++ b/src/app/components/post-list/post-list.component.html
@@ -2,6 +2,24 @@
   @let user = currentUser.value()!;
 
   <div class="post-list-component">
+    <mat-form-field appearance="outline" class="search-bar">
+      <mat-label>Search</mat-label>
+      <input
+        matInput
+        type="text"
+        [formControl]="searchControl"
+        placeholder="Type to search..."
+      />
+      <button
+        mat-icon-button
+        matSuffix
+        aria-label="Search"
+        (click)="triggerSearch()"
+      >
+        <mat-icon>search</mat-icon>
+      </button>
+    </mat-form-field>
+    <button mat-icon-button aria-label="Search" (click)="addDoc()">Test</button>
     <div class="controls">
       <button
         class="new-post-btn"
